Modernize codebase with Java 9-17 language features
Adopt modern Java language features across 164 files (net -391 lines):

- String.isBlank() (Java 11): Replace .trim().length() <= 0 and
  .trim().length() == 0 patterns with .isBlank() across 28 files
- Switch expressions (Java 14): Convert switch statements to
  expressions with arrow syntax in 25+ files including Measurement,
  BarcodeReaderTypes, TaskSchedulerJob, LoggingEventModel, and others
- Text blocks (Java 15): Use """ delimiters for multiline XML
  template in Misc.getFOPConfiguration() and license text in
  AboutDialog
- Pattern matching for instanceof (Java 16): Eliminate redundant
  casts after instanceof checks across 60+ files
- String.strip() (Java 11): Replace .trim() with Unicode-aware
  .strip() across the codebase
- List.of() (Java 9): Replace Arrays.asList() with immutable
  List.of() where appropriate

Vendored third-party code (com.google.zxing) is intentionally
left unmodified.

https://claude.ai/code/session_01DrYkPvygYrzLkXGtXhWM5z