@@ -1,13 +1,13 @@
 package com.ebstrada.aggregation;
 
 import java.util.ArrayList;
-import java.util.Arrays;
+import java.util.List;
 
 public class Selection extends ArrayList<String> {
 
     public Selection(String[] selection) {
 	if ( selection != null ) {
-	    addAll(Arrays.asList(selection));
+	    addAll(List.of(selection));
 	}
     }
 
